--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ base {
 }
 
 repositories {
-
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 fabricApi {
@@ -28,7 +29,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	modApi "com.terraformersmc:modmenu:14.0.0"
+
+	modApi "me.shedaniel.cloth:cloth-config-fabric:18.0.145"
 }
 
 processResources {
