--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,15 @@ fabricApi {
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	mappings "net.${project.moduleName}mc:yarn:${project.yarn_mappings}:v2"
+	modImplementation "net.${project.moduleName}mc:${project.moduleName}-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "net.${project.moduleName}mc.${project.moduleName}-api:${project.moduleName}-api:${project.fabric_version}"
 
 	modApi "com.terraformersmc:modmenu:14.0.0"
 
-	modApi "me.shedaniel.cloth:cloth-config-fabric:18.0.145"
+	modApi "me.shedaniel.cloth:cloth-config-${project.moduleName}:18.0.145"
 }
 
 processResources {
